# SpeechAlignViz

./: README.md  pyproject.toml  requirements.txt
examples/: example.TextGrid  example.json  example.srt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: InputPanel.jsx  Visualizer.jsx
scripts/: build_frontend.py
src/speech_align_viz/: app.py  cli.py  figure.py
src/speech_align_viz/static/: index.html
src/speech_align_viz/static/assets/: index-6V37R4vN.css  index-CYKcyoXn.css  index-D97tA2R7.js  index-DChO4Ioz.js  index-DMuU9hzt.js  index-_mKO4o35.js
