[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-align-viz"
version = "0.1.0"
description = "Audio Text Alignment Visualization Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "click",
    "python-multipart",
    "aiofiles"
]

[project.scripts]
speech-align-viz = "speech_align_viz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/speech_align_viz"]
